--- a/apps/deezer-front/src/assets/reset.css
+++ b/apps/deezer-front/src/assets/reset.css
@@ -68,5 +68,7 @@ h6 {
     --deezer-light-grey: hsl(0, 0%, 90%);
     --deezer-dark-grey: hsl(0, 0%, 44%);
     --deezer-red: hsl(355, 65%, 62%);
-    --deezer-red-hearth: #EF5466;
+    --deezer-red-hearth: #EF5466; 
+    --width-RouerView: calc(100vw - 245px);
+    --height--header: 65px;
 }
